# chronicle

./: .gitignore  ARCHITECTURE.md  README.md  build.ps1  start-dev.bat
docs/: BUILD_PLAN.md  CONCEPT.md  DEFINITION_OF_DONE.md  SCOPE.md  TRANSFER_GUIDE.md  V3_REQUIREMENTS.md  native-packaging-guide.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: splash.html
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  tauri.d.ts
frontend/src/__tests__/: App.test.tsx  RestoreFlow.integration.test.tsx  RestoreFlow.test.tsx  fiscalYear.test.ts
mcp-server/: README.md  chronicle_mcp.py  chronicle_readonly_mcp.py  requirements.txt  server.py
mcp-server/tests/: conftest.py  test_migration.py  test_tools.py
scripts/: check_upcoming.py  generate_chronicle_pdf.mjs  generate_pdf.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  server.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/engines/: export.rs  mod.rs  scheduled.rs
src-tauri/src/models/: common.rs  entry.rs  export.rs  goal.rs  mod.rs  program.rs  project.rs  scheduled.rs  settings.rs
src-tauri/src/routes/: attachments.rs  backup.rs  dashboard.rs  data.rs  entries.rs  entries_test.rs  export.rs  goals.rs  lessons.rs  links.rs  mod.rs  notes.rs  programs.rs  projects.rs  reports.rs  reviews.rs  scheduled.rs  settings.rs  stakeholders.rs  system.rs  tags.rs  time_distribution.rs
src-tauri/tests/: route_parity.rs
(+56 files in other folders)
