[package]
name = "chronicle"
# Version must match across all 5 locations — see docs/VERSION_LOCATIONS.md
version = "3.0.0"
description = "Chronicle — Personal Work Tracking (Tauri desktop shell)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [
    "window-all",
    "dialog-open",
    "dialog-save",
    "shell-open",
    "path-all",
    "fs-write-file",
] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
proptest = "1.4"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
regex-lite = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
